--- a/app/Resources/views/author/articles/create-article-html.twig
+++ b/app/Resources/views/author/articles/create-article-html.twig
@@ -1,6 +1,6 @@
 {% extends 'author/panel.html.twig' %}
 {% block sectionBody %}
-    <h2 class="text-dark">New Article</h2>
+    <h2 class="text-dark">New Post</h2>
     <hr>
     <div id="form-container" class="container">
         {% if errors %}
