--- a/app/Resources/views/author/articles/edit-article-html.twig
+++ b/app/Resources/views/author/articles/edit-article-html.twig
@@ -1,7 +1,7 @@
 {% extends 'author/panel.html.twig' %}
 {% block sectionBackground %}{{ article.backgroundImageLink }}{% endblock %}
 {% block sectionBody %}
-    <h2 class="text-dark">Edit Article {{ article.id }}</h2>
+    <h2 class="text-dark">Edit Post {{ article.id }}</h2>
     <a href="{{ path('show_article', {'id':article.id}) }}" class="btn btn-info">View Article</a>
     <hr>
     <div id="form-container" class="container">
