--- a/app/Resources/views/author/panel.html.twig
+++ b/app/Resources/views/author/panel.html.twig
@@ -25,15 +25,15 @@
                     {% block sections %}
                         <div class="sidebar_section">
                             <div class="sidebar_title_container">
-                                <div class="sidebar_title">Articles</div>
+                                <div class="sidebar_title">Posts</div>
                             </div>
                             <div class="sidebar_section_content pt-0">
                                 <ul class="list-group">
                                     <li class="list-group-item"><a href="{{ path('create_article') }}">Create
-                                            article</a>
+                                            Post</a>
                                     </li>
                                     <li class="list-group-item">
-                                        <a href="{{ path('my_articles') }}">My articles</a>
+                                        <a href="{{ path('my_articles') }}">My Posts</a>
                                     </li>
                                 </ul>
                             </div>
