--- a/app/Resources/views/partials/lang/en/subscribed.html.twig
+++ b/app/Resources/views/partials/lang/en/subscribed.html.twig
@@ -1,2 +1,3 @@
-<h2 class="alert alert-success">Successfully subscribed to {{ twigInformer.getWebsiteName }}</h2>
-<p><a href="/">Back</a> </p>
+<h4 class="alert alert-success">Successfully subscribed to {{ twigInformer.getWebsiteName }}</h4>
+<p class="text-dark">Thank You! We hate spam as much as you do, no worries!</p>
+<p><a href="/">Back</a></p>
