--- a/app/Resources/views/partials/sidebar/sidebar.html.twig
+++ b/app/Resources/views/partials/sidebar/sidebar.html.twig
@@ -1,8 +1,8 @@
 <!-- Sidebar -->
 <div class="col-lg-3">
-    <div class="sidebar">
+    <div class="sidebar" style="background: #ededed;">
         {% block disableBackground %}
-            <div class="sidebar_background"></div>
+            <div class="sidebar_bg"></div>
         {% endblock %}
         {% block sections %}
 
