--- a/app/Resources/views/admin/panel.html.twig
+++ b/app/Resources/views/admin/panel.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Admin Panel {% endblock %}
 
 {% block body %}
-   {% embed 'partials/banner.html.twig' %} {% endembed %}
+    {% embed 'partials/banner.html.twig' %} {% endembed %}
 
     <div class="page_content">
         <div class="container">
@@ -92,6 +92,19 @@
                                     </li>
                                     <li class="list-group-item">
                                         <a href="{{ path('browse_banners') }}">Browse Banners</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="sidebar_section">
+                            <div class="sidebar_title_container">
+                                <div class="sidebar_title">AAaM Feature</div>
+                            </div>
+                            <div class="sidebar_section_content pt-0">
+                                <ul class="list-group">
+                                    <li class="list-group-item">
+                                        <a href="{{ path('article_as_a_message') }}">AAaM Settings</a>
                                     </li>
                                 </ul>
                             </div>
