--- a/app/Resources/views/default/categories.html.twig
+++ b/app/Resources/views/default/categories.html.twig
@@ -36,9 +36,15 @@
                         </div>
                         <div class="section_content">
                             <h3 class="font-kirang-hearang text-info">{{ viewModel.selectedCategory.categoryName }} <small>({{ viewModel.page.itemsCount }})</small></h3>
+                             {% if viewModel.articles|length < 1 %}
+                                <div>
+                                    <h2 class="alert alert-success">{{ localLang.comingSoon }}</h2>
+                                </div>
+                            {% endif %}
                             <div class="grid clearfix" id="catArticlesHolder" style="min-height: 250px;">
                                 {% embed 'partials/articles/articles-cards-renderer.html.twig' with {'articles':viewModel.articles} %} {% endembed %}
                             </div>
+
                         </div>
                     </div>
 
