--- a/app/Resources/views/partials/articles/large-card-with-image.html.twig
+++ b/app/Resources/views/partials/articles/large-card-with-image.html.twig
@@ -7,6 +7,9 @@
         <div class="card-title"><a href="{{ path('show_article', {'id': article.id}) }}">{{ article.title }}</a></div>
         <p class="card-text">{{ article.summary }}</p>
         <small class="post_meta">
+            {% if app.user %}
+                {% embed 'partials/articles/article-star.html.twig' with {'article':article} %} {% endembed %}
+            {% endif %}
             <a href="{{ path('user_details', {'username':article.author.username}) }}">{{ article.author.username }}</a><span>{{ article.dateAdded.format(twigInformer.simpleDateFormat) }}</span>
         </small>
     </div>
