--- a/app/Resources/views/partials/lang/bg/login.html.twig
+++ b/app/Resources/views/partials/lang/bg/login.html.twig
@@ -7,7 +7,7 @@
     <div class="text-dark">
         <div class="form-group">
             <label for="username">Потребителско име</label>
-            <input required type="text" name="_username" placeholder="Потр. име" id="username" class="form-control">
+            <input required type="text" value="{{ last_username }}" name="_username" placeholder="Потр. име" id="username" class="form-control">
         </div>
         <div class="form-group">
             <label for="password">Парола</label>
