--- a/app/Resources/views/partials/lang/bg/privacy.html.twig
+++ b/app/Resources/views/partials/lang/bg/privacy.html.twig
@@ -1,9 +1,9 @@
 <h3 class="text-dark">Поверителност на данните в Jesterous.net</h3>
-<p class="text-dark">При регистрация, потребителя е длъжен да престави своя e-mail адрес.</p>
-<p class="text-dark">Отписването от получаване на известия е възможно с кликането на един бутон</p>
+<p class="text-dark">При регистрация, потребителят е длъжен да предостави своя e-mail адрес.</p>
+<p class="text-dark">Отписването от получаване на известия е възможно с кликането на един бутон.</p>
 <p class="text-dark">При изтриване на вашия профил, ние ще изтрием:</p>
 <ul class="-list-ul">
-    <li>Вашите данни (потр. име, парола, e-mail адрес и т.н)</li>
-    <li>Всички ваши харесвания, статии, коментари</li>
-    <li>Всички качени снимки (част от статия или профилна снимка)</li>
+    <li>Вашите данни (потребителско име, парола, e-mail адрес и т.н)</li>
+    <li>Всички ваши харесвания, постове и коментари</li>
+    <li>Всички качени снимки (част от пост или профилна снимка)</li>
 </ul>
