--- a/app/Resources/views/partials/lang/bg/subscribed.html.twig
+++ b/app/Resources/views/partials/lang/bg/subscribed.html.twig
@@ -1,2 +1,3 @@
-<h2 class="alert alert-success">Успешно се абонирахте за {{ twigInformer.getWebsiteName }}</h2>
+<h4 class="alert alert-success">Успешно се абонирахте за {{ twigInformer.getWebsiteName }}</h4>
+<p class="text-dark">Благодаря! Ние също не харесваме да ни спамят, така че няма страшно!</p>
 <p><a href="/">Обратно</a> </p>
