--- a/app/Resources/views/partials/quotes/main-content-quote.html.twig
+++ b/app/Resources/views/partials/quotes/main-content-quote.html.twig
@@ -6,7 +6,8 @@
 
     <div class="blog_section">
         <div class="section_panel d-flex flex-row">
-            <div class="section_title">{{ attribute(quote, nameLocaleMethod) }}</div>
+            <!-- Author name hidden since version 1.1 -->
+            <div class="section_title" style="display: none;">{{ attribute(quote, nameLocaleMethod) }}</div>
         </div>
 
         <div class="section_content">
@@ -14,6 +15,8 @@
             <div class="flex align-items-center font-pacifico text-info" style="font-size: 1.8em;">
                 {{ attribute(quote, contentLocaleMethod) }}
             </div>
+            <small>{{ attribute(quote, nameLocaleMethod) }}</small>
+
             <div class="like-section mt-2">
                 {% if app.user %}
                     <button token="{{ csrf_token('quote') }}" quote-id="{{ quote.id }}"
