--- a/app/Resources/views/partials/header.html.twig
+++ b/app/Resources/views/partials/header.html.twig
@@ -88,6 +88,7 @@
                 <li class="menu_mm"><a href="{{ path('user_panel') }}">{{ localLang.profile }}</a>  </li>
                 <li class="menu_mm"><a href="{{ path('security_logout') }}">{{ localLang.logout }}</a> </li>
                 <li class="menu_mm"><a href="#" id="mobileNotificationsBtn">{{ localLang.notifications }}</a></li>
+                <li class="menu_mm"><a href="{{ path('my_starred_articles') }}">{{ localLang.starredArticles }}</a></li>
             {% else %}
                 <li class="menu_mm"><a href="{{ path('security_login') }}">{{ localLang.login }}</a> </li>
                 <li class="menu_mm"><a href="{{ path('security_register') }}">{{ localLang.register }}</a> </li>
