--- a/app/Resources/views/partials/lang/bg/login.html.twig
+++ b/app/Resources/views/partials/lang/bg/login.html.twig
@@ -17,5 +17,6 @@
         <div class="form-group">
             <button tabindex="3" class="btn btn-primary" type="submit">Напред</button>
         </div>
+        <p class="text-dark">Забравена парола? натиснете<a href="{{ path('forgotten_password') }}"> тук</a>.</p>
     </div>
 </form>
