--- a/app/Resources/views/partials/lang/en/login.html.twig
+++ b/app/Resources/views/partials/lang/en/login.html.twig
@@ -18,4 +18,5 @@
             <button tabindex="3" class="btn btn-primary" type="submit">Login</button>
         </div>
     </div>
+    <p class="text-dark">Forgotten password? click<a href="{{ path('forgotten_password') }}"> here.</a></p>
 </form>
